# geo-line-ranker

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  API_SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  README_EN.md  README_JA.md  ROADMAP.md  SECURITY.md  cspell.json  flake.nix  justfile
.config/: nextest.toml
.docker/: api.Dockerfile  crawler.Dockerfile  docker-compose.full.yaml  docker-compose.test.yaml  docker-compose.yaml  frontend.Dockerfile  worker.Dockerfile
.github/: actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: optional_evidence.md
.github/workflows/: ci.yaml  docs.yaml  local-llm-review.yml  spellcheck.yaml
apps/api/: Cargo.toml
apps/api/src/: cache_key.rs  candidate_backend.rs  errors.rs  lib.rs  main.rs  request_id.rs  routes.rs  trace.rs  trace_graph.rs  tracking.rs
apps/api/tests/: track_api.rs
apps/cli/: Cargo.toml
apps/cli/src/: context_inspect.rs  doctor.rs  explain.rs  explanation_integrity.rs  fixtures.rs  formatting.rs  import.rs  jobs.rs  lib.rs  main.rs  profile_persistence.rs  replay.rs  repository.rs  snapshot.rs
apps/cli/tests/: import_demo_jp.rs  import_event_csv.rs  snapshot_refresh.rs
apps/cli/tests/common/: mod.rs
apps/crawler/: Cargo.toml
apps/crawler/src/: command.rs  lib.rs  main.rs  manifest.rs  report.rs  shared.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
apps/worker/tests/: job_flow.rs
configs/crawler/sources/: aoyama-junior-school-tour.yaml  custom_example.yaml  hachioji_junior_events.yaml  keio_events.yaml  nihon_university_junior_events.yaml  shibaura_junior_events.yaml  utokyo_events.yaml
configs/evaluation/scenarios/: S01_hokkaido_guardrail.yaml  S02_line_intent.yaml  S03_city_fallback.yaml  S04_cold_start.yaml  S05_same_school_cap.yaml  S06_same_group_cap.yaml  S07_freshness_bounded.yaml  S08_explanation_integrity.yaml  S09_article_reserved_slot.yaml  S10_sql_only_full_mode_parity.yaml
configs/profiles/local-discovery-generic/: profile.yaml  reasons.yaml
configs/profiles/school-event-jp/: profile.yaml  reasons.yaml
configs/ranking/: events.default.yaml  fallback.default.yaml  fallback.v020.yaml  placement.detail.yaml  placement.home.yaml  placement.mypage.yaml  placement.search.yaml  schools.default.yaml  tracking.default.yaml
crates/api-contracts/: Cargo.toml
crates/api-contracts/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  profile_connectors.rs
crates/connectors/generic-csv/: Cargo.toml
crates/context/: Cargo.toml
crates/context/src/: lib.rs  (+1 more)
crates/crawler-core/: Cargo.toml
crates/crawler-core/src/: lib.rs
crates/domain/: Cargo.toml
crates/geo/: Cargo.toml
crates/observability/: Cargo.toml
crates/openapi/: Cargo.toml
crates/ranking/: Cargo.toml
crates/ranking/src/: diversity.rs  explanation.rs  fallback.rs  feature.rs  golden_scenarios.rs  graph.rs  lib.rs  planning.rs  profile.rs  scoring.rs  test_utils.rs
crates/storage/: Cargo.toml
crates/storage-opensearch/: Cargo.toml
crates/storage-opensearch/src/: lib.rs
crates/storage-postgres/: Cargo.toml
crates/storage-postgres/src/: lib.rs  migrations.rs  pool.rs  repository.rs
crates/storage-postgres/tests/: candidate_links.rs  context_resolution.rs  crawl_runs.rs  event_import.rs  job_queue.rs  migrations.rs  profile_registry.rs  recommendation_traces.rs  search_signal_snapshots.rs
crates/storage-postgres/tests/common/: mod.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/worker-core/: Cargo.toml
crates/worker-core/src/: lib.rs
docs/: ARCHITECTURE.md  CONNECTOR_MANIFESTS.md  CONTRIBUTING_LOCAL.md  DATA_LICENSES.md  DATA_SOURCES.md  DEPRECATION_POLICY.md  FIRST_15_MINUTES.md  MVP_ACCEPTANCE.md  MYSQL_COMPATIBILITY.md  OPERATIONS.md  OPERATOR_FEEDBACK_LOOP.md  OPTIONAL_EVIDENCE_CLOSEOUT_INTEGRITY.md  OPTIONAL_EVIDENCE_CLOSEOUT_LEDGER.md  OPTIONAL_EVIDENCE_GRADUATION.md  OPTIONAL_EVIDENCE_HANDOFF.md  OPTIONAL_EVIDENCE_INTAKE.md  OPTIONAL_EVIDENCE_LIFECYCLE_INDEX.md  OPTIONAL_EVIDENCE_LIFECYCLE_INVENTORY_REPORT.md  OPTIONAL_EVIDENCE_OPERATING_HANDOFF.md  OPTIONAL_EVIDENCE_PACKETS.md  OPTIONAL_EVIDENCE_RECHECK_AUDIT.md  OPTIONAL_EVIDENCE_TRIAGE.md  PHASE11_REGRESSION_EVIDENCE.md  POST_LAUNCH_RUNBOOK.md  POST_MVP_HARDENING.md  PROFILE_PACKS.md  PUBLIC_MVP_RELEASE_READINESS.md  QUICKSTART.md  README.md  REASON_CATALOG.md  RUNWAY_2_CONTEXT_QUALITY.md  TESTING.md  V0_2_1_TO_V0_2_5_DESIGN_PLAN.md  VERSIONING.md
docs/crawler_scaffolds/: aoyama-junior-school-tour.md
docs/design_document/: 00_EXECUTIVE_SUMMARY_JA.md  01_REQUIREMENTS_JA.md  02_SYSTEM_OVERVIEW_JA.md  03_RECOMMENDATION_LOGIC_JA.md  04_DATA_FLOW_PRIVACY_JA.md  05_CRAWLING_AND_IMPORT_POLICY_JA.md  06_OPERATIONS_GUIDE_JA.md  07_NON_ENGINEER_QUICKSTART_JA.md  08_GLOSSARY_JA.md  09_FAQ_JA.md  10_DOCS_PROMPT_TEMPLATE.md  README_JA.md
docs/v0.2.0/: README.md
examples/frontend-next/: package-lock.json  package.json
examples/import/: README.md  events.archive.yaml  events.sample.csv  events.sample.ndjson  events.sample.tar
examples/local-discovery-generic/: README.md
examples/ranking/: README.md  detail.request.json  home.request.json  mypage.request.json  search.request.json
examples/school-event-jp/: README.md
schemas/: openapi.json  ranking-rule.schema.json  recommendation.request.json  recommendation.response.json
scripts/: ci_local.sh  contributor_dev.sh  contributor_env.sh  contributor_eval.sh  contributor_setup.sh  contributor_smoke.sh  data_quality_doctor.sh  docs_check.sh  ensure_nextest.sh  frontend_smoke.sh  local_review_eval.py  mvp_acceptance.sh  openapi_drift_check.sh  optional_evidence_review.sh  post_launch_doctor.sh  post_mvp_hardening.sh  release_readiness.sh  rust_test_all.sh  rust_test_fast.sh  rust_test_heavy.sh  rust_test_postgres.sh  spellcheck.sh  ts_sdk_check.sh  wait_for_postgres.sh
tests/compatibility/: Cargo.toml
tests/compatibility/src/: lib.rs
tests/compatibility/tests/: sql_only_vs_full.rs
(+61 files in other folders)
