[workspace]
members = [
  "apps/api",
  "apps/cli",
  "apps/crawler",
  "apps/worker",
  "crates/api-contracts",
  "crates/cache",
  "crates/config",
  "crates/context",
  "crates/connectors/generic-http",
  "crates/connectors/generic-csv",
  "crates/crawler-core",
  "crates/connectors/jp-postal",
  "crates/connectors/jp-rail",
  "crates/connectors/jp-school",
  "crates/domain",
  "crates/geo",
  "crates/observability",
  "crates/openapi",
  "crates/ranking",
  "crates/storage",
  "crates/storage-opensearch",
  "crates/storage-postgres",
  "crates/test-support",
  "crates/worker-core",
  "tests/compatibility",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
deadpool-postgres = "0.14.1"
dotenvy = "0.15"
fs2 = "0.4"
redis = { version = "0.29", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.14"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
uuid = { version = "1.12", features = ["v4"] }
