[package]
name = "api-contracts"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
context = { path = "../context", features = ["schema"] }
domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
