[package]
name = "config"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
domain = { path = "../domain" }
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
