[package]
name = "crawler-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
domain = { path = "../domain" }
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
