[package]
name = "storage-opensearch"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["postgres-sync"]
postgres-sync = ["dep:async-trait", "dep:storage-postgres"]

[dependencies]
anyhow.workspace = true
async-trait = { workspace = true, optional = true }
config = { path = "../config" }
domain = { path = "../domain" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
storage = { path = "../storage" }
storage-postgres = { path = "../storage-postgres", optional = true }
