[package]
name = "test-support"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
